add snowflake algorithm and channel server
